# morsec

./: .gitignore  Cargo.toml  README.md
src/: conversion.rs  lib.rs
tests/: sos.rs
