[package]
name = "morsec"
version = "0.1.2"
authors = ["Ryan Kavanagh <ryan.p.kav@gmail.com>"]
edition = "2021"
description = "A library to handle transmitting Morse code messages"
license = "MIT"
keywords = ["morse", "code", "transmit", "communication"]
categories = []
homepage = "https://github.com/ryankav/morsec"
repository = "https://github.com/ryankav/morsec"
readme = "README.md"
include = [
  "src/*",
  "Cargo.toml"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

[features]
default = ["std"]
std = []
